change package name to com.azzam.quran

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.alquran">
+    package="com.azzam.quran">
    <application
         android:label="alquran"
         android:name="${applicationName}"
