--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   get: 4.6.1
   http: 0.13.4
   change_app_package_name: 1.0.0
+  google_fonts: 2.3.1
+  flutter_svg: 1.0.3
   flutter: 
     sdk: flutter
 
