--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.1
   http: 0.13.4
-  change_app_package_name: 1.0.0
   google_fonts: 2.3.1
   flutter_svg: 1.0.3
   flutter: 
@@ -17,11 +16,18 @@ dependencies:
 
 dev_dependencies: 
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: 0.9.2
+  change_app_package_name: 1.0.0
   flutter_test: 
     sdk: flutter
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/icon.png"
+
 flutter: 
-  assets:
+  assets: 
     - assets/illustrations/
     - assets/icons/
   uses-material-design: true
